--- a/publications.html
+++ b/publications.html
@@ -305,7 +305,185 @@
     <div class="publication">
         <span class="authors">Y. Jiao, W.C. Huang, K. Chiem, Y. Song, J. Sun, S.K. Chothe, S. Zhou, Y. Luo, M.T. Mabrouk, J. Ortega, S.V. Kuchipudi, L. Martinez-Sobrido, J.F. Lovell</span> – 
         <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/smll.202304534" class="journal">SARS-CoV-2 Protein Nanoparticle Vaccines Formed In Situ From Lyophilized Lipids</a> 
-                    
+  </div>
+    <div class="publication">
+        <span class="authors">Y. Hu, Y. Sun, Z. Liao, D. An, X. Liu, X. Yang, Y. Tian, S. Deng, J. Meng, Y. Wang, J. Li, Y. Deng, Z. Zhou, Q. Chen, Y. Ye, W. Wei, B. Wu, J.F. Lovell, H. Jin, F. Huang, C. Wan, K. Yang</span> – 
+        <a href="https://www.cell.com/molecular-therapy-family/molecular-therapy/fulltext/S1525-0016(23)00672-X" class="journal">Irradiated engineered tumor cell-derived microparticles remodel the tumor immune microenvironment and enhance antitumor immunity</a> 
+  </div>
+    <div class="publication">
+        <span class="authors">J.F. Lovell, K. Miura, Y.O. Baik, C. Lee, J.Y. Lee, Y.S. Park, I. Hong, J.H. Lee, T. Kim, S.H. Seo, J.O. Kim, M. Song, C.J. Kim, J.K. Choi, J. Kim, E.J. Choo, J.H. Choi</span> – 
+        <a href="https://www.sciencedirect.com/science/article/pii/S1201971223007658" class="journal">One-year antibody durability induced by EuCorVac-19, a liposome-displayed COVID-19 receptor binding domain subunit vaccine, in healthy Korean subjects</a> 
+ </div>
+    <div class="publication">
+        <span class="authors">J.F. Lovell, K. Miura, Y.O. Baik, C. Lee, J.Y. Lee, Y.S. Park, I. Hong, J.H. Lee, T. Kim, S.H. Seo, J.O. Kim, M. Song, C.J. Kim, J.K. Choi, J. Kim, E.J. Choo, J.H. Choi</span> – 
+        <a href="https://www.sciencedirect.com/science/article/pii/S1201971223007658" class="journal">One-year antibody durability induced by EuCorVac-19, a liposome-displayed COVID-19 receptor binding domain subunit vaccine, in healthy Korean subjects</a> 
+   <!-- 2023 -->
+     <div class="pub-year">
+        <h2>2023</h2>
+  </div>
+    <div class="publication">
+        <span class="authors">S Zhou, Y Luo, JF Lovell</span> – 
+        <a href="https://www.tandfonline.com/doi/abs/10.1080/14760584.2023.2274479%4010.1080/tfocoll.2024.0.issue-The_future_of_vaccines" class="journal">Vaccine approaches for antigen capture by liposomes</a>
+   </div>
+    <div class="publication">
+        <span class="authors">R. He, L. Jiexin, Z. Jingyu, Y. Xingyue, Z. Nan, Q. Qian, L. Dan, Y. Yue, L. Xiaofeng, J.F. Lovell, Z. Yumiao</span> – 
+        <a href="https://onlinelibrary-wiley-com.gate.lib.buffalo.edu/doi/full/10.1002/smll.202302756" class="journal">Anti-Tumor Immunity Induced by a Ternary Membrane System Derived From Cancer Cells, Dendritic Cells, and Bacteria</a>
+   </div>
+    <div class="publication">
+        <span class="authors">J Lovell, WC Huang</span> – 
+        <a href="https://patents.google.com/patent/US20230390414A1/en" class="journal">Particle based formulation of sars-cov-2 receptor binding domain</a>
+   </div>
+    <div class="publication">
+        <span class="authors">J Liu, H Ren, C Zhang, J Li, Q Qiu, N Zhang, N Jiang, JF Lovell, Y Zhang</span> – 
+        <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/smll.202304023" class="journal">Orally-Delivered, Cytokine-Engineered Extracellular Vesicles for Targeted Treatment of Inflammatory Bowel Disease</a>
+  </div>
+    <div class="publication">
+        <span class="authors">S. Zhou, OA Karl, M. T. Mabrouk, D. Jahagirdar, W.C. Huang, J. A. Guerra, X. He, J. Ortega, S. T Poole, E. R Hall, O. G Gomez-Duarte, M. Maciel Jr, J. F Lovell</span> – 
+        <a href="https://www.sciencedirect.com/science/article/pii/S2319417023000252" class="journal">Antibody induction in mice by liposome-displayed recombinant enterotoxigenic Escherichia coli (ETEC) colonization antigens</a>
+ </div>
+    <div class="publication">
+        <span class="authors">M. T Mabrouk, A. A Zidan, N. Aly, M. T Mohammed, F. Ghantous, M. S Seaman, J. F Lovell, M. L Nasr</span> – 
+        <a href="https://www.mdpi.com/2076-393X/11/11/1655" class="journal">Circularized Nanodiscs for Multivalent Mosaic Display of SARS-CoV-2 Spike Protein Antigens</a>
+</div>
+    <div class="publication">
+        <span class="authors">B Sun, G Paraskevopoulos, J Min, R Rossdeutcher, S Ghosh, B Quinn, MH Lin, D Sarkar, D Sukumaran, Y Wang, K Vávrová, J F Lovell, Y Zhang</span> – 
+        <a href="https://advanced.onlinelibrary.wiley.com/doi/full/10.1002/advs.202302658" class="journal">Topical Drug Delivery of Concentrated Cabazitaxel in an α-Tocopherol and DMSO Solution</a>
+  </div>
+    <div class="publication">
+        <span class="authors">U Chitgupi, Y Qin, S Ghosh, B Quinn, K Carter, X He, U Sunar, JF Lovell</span> – 
+        <a href="https://www.mdpi.com/1999-4923/15/10/2385" class="journal">Folate-Targeted Nanoliposomal Chemophototherapy</a>
+  </div>
+    <div class="publication">
+        <span class="authors">Y Yan, S John, Y Yuja Vaquiz, A Nilam, J Lovell, N Wilson, M Mehrmohammadi</span> – 
+        <a href="https://ieeexplore.ieee.org/abstract/document/10307015" class="journal">Ultrasound and Photoacoustic Guided Gastrostomy to Prevent Colonic Injury</a>
+ </div>
+    <div class="publication">
+        <span class="authors">H I Kilian, H Zhang, M Mahdi Shiraz Bhurwani, A M Nilam, D Seong, M Jeon, C N Ionita, J Xia, J F Lovell</span> – 
+        <a href="https://www.spiedigitallibrary.org/journals/journal-of-biomedical-optics/volume-28/issue-8/082803/Barium-sulfate-and-pigment-admixture-for-photoacoustic-and-x-ray/10.1117/1.JBO.28.8.082803.full" class="journal">Barium sulfate and pigment admixture for photoacoustic and x-ray contrast imaging of the gut</a>
+  </div>
+    <div class="publication">
+        <span class="authors">J Meng, X Yang, JHuang, Z Tuo, Y Hu, Z Liao, Y Tian, S Deng, Y Deng, Z Zhou, J F Lovell, H Jin, Y Liu, K Yang</span> – 
+        <a href="https://advanced.onlinelibrary.wiley.com/doi/full/10.1002/advs.202300517" class="journal">Ferroptosis-Enhanced Immunotherapy with an Injectable Dextran-Chitosan Hydrogel for the Treatment of Malignant Ascites in Hepatocellular Carcinoma</a>
+   </div>
+    <div class="publication">
+        <span class="authors">B Sun, J Liu, S Li, JF Lovell, Y Zhang</span> – 
+        <a href="https://www.mdpi.com/2313-433X/9/6/115" class="journal">Imaging of Gastrointestinal Tract Ailments</a>
+   </div>
+    <div class="publication">
+        <span class="authors">S D Sonkawade, S Xu, M Kim, S Nepali, VG Karambizi, S Sexton, S G Turowski, K Li, J A Spernyak, J F Lovell, A George, S Suwal, U C Sharma, S Pokharel</span> – 
+        <a href="https://www.mdpi.com/2073-4409/12/12/1589" class="journal">Phospholipid Encapsulation of an Anti-Fibrotic Endopeptide to Enhance Cellular Uptake and Myocardial Retention</a>
+</div>
+    <div class="publication">
+        <span class="authors">B Sun, S Shao, S Ghosh, J Li, X Wang, C Li, B Quinn, P Alexandridis, J F Lovell, Y Zhang</span> – 
+        <a href="https://link.springer.com/article/10.1007/s40843-022-2384-3" class="journal">Facile preparation of cabazitaxel-loaded nanoparticles directly lyophilized from dioxane</a>
+ </div>
+    <div class="publication">
+        <span class="authors">MH Zhu, XD Zhu, M Long, X Lai, Y Yuan, Y Huang, L  Zhang, Y Gao, J Shi, Q Lu, P Sun, J F Lovell, HZ Chen, C Fang</span> – 
+        <a href="https://research.ebsco.com/c/vist5s/search/details/2qa37if5wr?request-context=plink&db=a2h" class="journal">Metal‐Coordinated Adsorption of Nanoparticles to Macrophages for Targeted Cancer Therapy (Adv. Funct. Mater. 19/2023)</a>
+ </div>
+    <div class="publication">
+        <span class="authors">C Zhang, X Wang, G Liu, H Ren, J Li, Z Jiang, J Liu, JF Lovell, Y Zhang</span> – 
+        <a href="https://www.sciencedirect.com/science/article/abs/pii/S0168365923002092" class="journal">Metal coordination micelles for anti-cancer treatment by gene-editing and phototherapy</a>
+</div>
+    <div class="publication">
+        <span class="authors">MH Zhu, XD Zhu, M Long, X Lai, Y Yuan, Y Huang, L Zhang, Y Gao, J Shi, Q Lu, P Sun, J F Lovell, HZ Chen, C Fang</span> – 
+        <a href="https://advanced.onlinelibrary.wiley.com/doi/abs/10.1002/adfm.202214842" class="journal">Metal-Coordinated Adsorption of Nanoparticles to Macrophages for Targeted Cancer Therapy</a>
+</div>
+    <div class="publication">
+        <span class="authors">J C Hsu, Z Tang, O E Eremina, A Marios Sofias, T Lammers, J F Lovell, C Zavaleta, W Cai, D P Cormode</span> – 
+        <a href="https://www.nature.com/articles/s43586-023-00211-4" class="journal">Nanomaterial-based contrast agents</a>
+</div>
+    <div class="publication">
+        <span class="authors">E Oakley, M Kim, S Ghosh, H Kutscher, J Lovell, L Curtin, S Sexton, A Hutson, G Shafirstein</span> – 
+        <a href="https://aacrjournals.org/cancerres/article/83/7_Supplement/2420/723856/Abstract-2420-Interstitial-chemo-phototherapy-for" class="journal">Interstitial chemo-phototherapy for treatment of locally advanced hepatocellular carcinoma: A preclinical study</a>
+ </div>
+    <div class="publication">
+        <span class="authors">L Lu, H Zi, J Zhou, J Huang, Z Deng, Z Tang, L Li, X Shi, PC Lo, J F Lovell, D Deng, C Wan, H Jin</span> – 
+        <a href="https://advanced.onlinelibrary.wiley.com/doi/full/10.1002/advs.202206212" class="journal">Engineered Microparticles for Treatment of Murine Brain Metastasis by Reprograming Tumor Microenvironment and Inhibiting MAPK Pathway</a>
+ </div>
+    <div class="publication">
+        <span class="authors">B Sun, JF Lovell, Y Zhang</span> – 
+        <a href="https://wires.onlinelibrary.wiley.com/doi/abs/10.1002/wnan.1854" class="journal">Current development of cabazitaxel drug delivery systems</a>
+</div>
+    <div class="publication">
+        <span class="authors">S Ghosh, U Chitgupi, U Sunar, JF Lovell</span> – 
+        <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/php.13677" class="journal">Chemophototherapeutic Ablation of Doxorubicin-Resistant Human Ovarian Tumor Cells†</a>
+    <!-- 2022 -->
+    <div class="pub-year">
+        <h2>2022</h2>
+    </div>
+    <div class="publication">
+        <span class="authors">Z Jiang, Y Ding, JF Lovell, Y Zhang</span> – 
+        <a href="https://www.sciencedirect.com/science/article/pii/S221359792200091X" class="journal">Design and application of organic contrast agents for molecular imaging in the second near infrared (NIR-II) window</a>
+    </div>
+    <div class="publication">
+        <span class="authors">H I Kilian, C Ma, H Zhang, M Chen, A Nilam, B Quinn, Y Tang, J Xia, J Yao, J F Lovell</span> – 
+        <a href="https://www.sciencedirect.com/science/article/pii/S2213597922000714" class="journal">Intraperitoneal administration for sustained photoacoustic contrast agent imaging</a>
+  </div>
+    <div class="publication">
+        <span class="authors">H Zhang, A Nagy, C Bowman, M Peladeau-Pigeon, A Hu, J Lovell, C M Steele, J Xia</span> – 
+        <a href="https://link.springer.com/article/10.1007/s00455-022-10422-8" class="journal">Food-Grade Activated Charcoal for Contrast-Enhanced Photoacoustic Imaging of Aspiration: A Phantom Study</a>
+  </div>
+    <div class="publication">
+        <span class="authors">J F Lovell, Y O Baik, S K Choi, C Lee, JY Lee, K Miura, WC Huang, YS Park, SJ Woo, S Hwan Seo, JO Kim, M Song, CJ Kim, JK Choi, J Kim, E J Choo, JH Choi</span> – 
+        <a href="https://link.springer.com/article/10.1186/s12916-022-02661-1" class="journal">Interim analysis from a phase 2 randomized trial of EuCorVac-19: a recombinant protein SARS-CoV-2 RBD nanoliposome vaccine</a>
+  </div>
+    <div class="publication">
+        <span class="authors">Z R Sia, K Chiem, WC Huang, A Seffouh, A T Dereshgi, T Hogan, J Ortega, B A Davidson, L Martinez-Sobrido, J F Lovell</span> – 
+        <a href="https://journals.asm.org/doi/full/10.1128/jvi.01006-22" class="journal">Respiratory Vaccination with Hemagglutinin Nanoliposomes Protects Mice from Homologous and Heterologous Strains of Influenza Virus</a>
+ </div>
+    <div class="publication">
+        <span class="authors">J Li, H Ren, Q Qiu, X Yang, J Zhang, C Zhang, B Sun, JF Lovell, Y Zhang</span> – 
+        <a href="https://pubs.acs.org/doi/abs/10.1021/acsnano.2c06926" class="journal">Manganese Coordination Micelles That Activate Stimulator of Interferon Genes and Capture In Situ Tumor Antigens for Cancer Metalloimmunotherapy</a>
+    </div>
+    <div class="publication">
+        <span class="authors">B McLeod, M T Mabrouk, K Miura, R Ravichandran, S Kephart, S Hailemariam, T P Pham, A Semesi, I Kucharska, P Kundu, WC Huang, M Johnson, A Blackstone, D Pettie, M Murphy, J C Kraft, E M Leaf, Y Jiao, M Van de Vegte-Bolmer, GJ Van Gemert, J Ramjith, C Richter King, R S MacGill, Y Wu, K K Lee, M M Jore, N P King, J F Lovell, JP Julien</span> – 
+        <a href="https://www.cell.com/immunity/fulltext/S1074-7613(22)00350-8?dgcid=raven_jbs_etoc_email" class="journal">Vaccination with a structure-based stabilized version of malarial antigen Pfs48/45 elicits ultra-potent transmission-blocking antibody responses</a>
+</div>
+    <div class="publication">
+        <span class="authors">WC Huang, K Chiem, L Martinez-Sobrido, JF Lovell</span> – 
+        <a href="https://www.mdpi.com/2076-0817/11/9/1035" class="journal">Intranasal Immunization with Liposome-Displayed Receptor-Binding Domain Induces Mucosal Immunity and Protection against SARS-CoV-2</a>
+   </div>
+    <div class="publication">
+        <span class="authors">S Ghosh, X He, WC Huang, JF Lovell</span> – 
+        <a href="https://pubs.aip.org/aip/apb/article/6/3/036105/2820492" class="journal">Immune checkpoint blockade enhances chemophototherapy in a syngeneic pancreatic tumor model</a>
+ </div>
+    <div class="publication">
+        <span class="authors">WC Huang, M T Mabrouk, L Zhou, M Baba, M Tachibana, M Torii, E Takashima, E Locke, J Plieskatt, C Richter King, C H Coelho, P E Duffy, C Long, T Tsuboi, K Miura, Y Wu, T Ishino, J F Lovell</span> – 
+        <a href="https://www.nature.com/articles/s42003-022-03688-z" class="journal">Vaccine co-display of CSP and Pfs230 on liposomes targeting two Plasmodium falciparum differentiation stages</a>
+ </div>
+    <div class="publication">
+        <span class="authors">Z Liao, J Huang, PC Lo, JF Lovell, H Jin, K Yang</span> – 
+        <a href="https://link.springer.com/article/10.1186/s12951-022-01545-z" class="journal">Self-adjuvanting cancer nanovaccines</a>
+   </div>
+    <div class="publication">
+        <span class="authors">S Ghosh, B Sun, D Jahagirdar, D Luo, J Ortega, R M Straubinger, J F Lovell</span> – 
+        <a href="https://www.sciencedirect.com/science/article/pii/S1936523322000523" class="journal">Single-treatment tumor ablation with photodynamic liposomal irinotecan sucrosulfate</a>
+ </div>
+    <div class="publication">
+        <span class="authors">B Sun, S Ghosh, X He, WC Huang, B Quinn, M Tian, D Jahagirdar, M T Mabrouk, J Ortega, Y Zhang, S Shao, J F Lovell</span> – 
+        <a href="https://link.springer.com/article/10.1007/s12274-022-4090-3" class="journal">Anti-cancer liposomal chemophototherapy using bilayer-localized photosensitizer and cabazitaxel</a>
+  </div>
+    <div class="publication">
+        <span class="authors">M Li, N Beaumont, C Ma, J Rojas, T Vu, M Harlacher, G O’Connell, R C Gessner, H Kilian, L A Kasatkina, Y Chen, Q Huang, X Shen, J F Lovell, V V Verkhusha, T Czernuszewicz, J Yao</span> – 
+        <a href="https://ieeexplore.ieee.org/abstract/document/9760438" class="journal">Three-Dimensional Deep-Tissue Functional and Molecular Imaging by Integrated Photoacoustic, Ultrasound, and Angiographic Tomography (PAUSAT)</a>
+ </div>
+    <div class="publication">
+        <span class="authors">Y Hu, Y Sun, C Wan, X Dai, S Wu, PC Lo, J Huang, J F Lovell, H Jin, K Yang</span> – 
+        <a href="https://link.springer.com/article/10.1186/s12951-022-01358-0" class="journal">Microparticles: biogenesis, characteristics and intervention therapy for cancers in preclinical and clinical research</a>
+  </div>
+    <div class="publication">
+        <span class="authors">Z Tuo, Q He, Z Zhang, Y Wang, J Sun, Q Wei, Y Hu, J F Lovell, H Jin, K Yang</span> – 
+        <a href="https://www.sciencedirect.com/science/article/abs/pii/S1385894721060071" class="journal">Irradiation conditioning of adjuvanted, autologous cancer cell membrane nanoparticle vaccines</a>
+ </div>
+    <div class="publication">
+        <span class="authors">X He, S Zhou, B Quinn, D Jahagirdar, J Ortega, M D Long, S I Abrams, J F Lovell	</span> – 
+        <a href="https://aacrjournals.org/cancerimmunolres/article-abstract/10/3/314/681732/An-In-Vivo-Screen-to-Identify-Short-Peptide" class="journal">An In Vivo Screen to Identify Short Peptide Mimotopes with Enhanced Antitumor Immunogenicity</a>
+   </div>
+    <div class="publication">
+        <span class="authors">X He, S Zhou, B Quinn, D Jahagirdar, J Ortega, M D Long, S I Abrams, J F Lovell	</span> – 
+        <a href="https://aacrjournals.org/cancerimmunolres/article-abstract/10/3/314/681732/An-In-Vivo-Screen-to-Identify-Short-Peptide" class="journal">An In Vivo Screen to Identify Short Peptide Mimotopes with Enhanced Antitumor Immunogenicity</a>
+               
         <!-- 2021 -->
     <div class="pub-year">
         <h2>2021</h2>
